plugins {
    id 'java'
}

group 'com.github.ilevn.aochelper'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

// We are targeting Java 16 by default. If you'd rather use an older version,
// set this to something else.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}
